Revision history for DBIx::Class

    * Fixes
        - Relax the 'self_result_object' argument check in the relationship
          resolution codepath, restoring exotic uses of inflate_result
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011876.html

    * Misc
        - Remove warning about potential side effects of RT#79576 (scheduled)

0.082810 2014-10-25 13:58 (UTC)
    * Fixes
        - Fix incorrect collapsing-parser source being generated in the
          presence of unicode data among the collapse-points
        - Fix endless loop on BareSourcelessResultClass->throw_exception(...)

    * Misc
        - Depend on newer SQL::Abstract (fixing overly-aggressive parenthesis
          opener: RT#99503)
        - Depend on newer Moo, fixing some interoperability issues:
          http://lists.scsys.co.uk/pipermail/dbix-class/2014-October/011787.html

0.082801 2014-10-05 23:55 (UTC)
    * Known Issues
        - Passing large amounts of objects with stringification overload
          directly to DBIx::Class may result in strange action at a distance
          exceptions. More info (and a workaround description) can be found
          under "Note" at https://metacpan.org/pod/SQL::Abstract#is_plain_value
        - The relationship condition resolution fixes come with the side effect
          of returning more complete data, tripping up *some* users of an
          undocumented but widely used internal function. In particular
          https://rt.cpan.org/Ticket/Display.html?id=91375#txn-1407239

    * Notable Changes and Deprecations
        - DBIC::FilterColumn now properly bypasses \'' and \[] literals, just
          like the rest of DBIC
        - DBIC::FilterColumn "from_storage" handler is now invoked on NULLs
          returned from storage
        - find() now throws an exception if some of the supplied values are
          managed by DBIC::FilterColumn (RT#95054)
        - Custom condition relationships are now invoked with a slightly